@@ -51,33 +51,40 @@ the public CVS archive instead (see below for details).</dd>
 </dl>
 
 <table width="100%" cellpadding="3" border="0" summary="Download Links for Octave">
-<tr><th>Octave version</th>
-<th>Version</th>
+<tr><th>Octave version label</th>
+<th>Version number</th>
 <th>Release Date</th></tr>
 <tr><td class="download">
-<a href="ftp://ftp.octave.org/pub/octave">Stable</a> (also currently ancient and obsolete)</td>
-<td class="download">2.0.17
-    (<a href="ftp://ftp.octave.org/pub/octave/obsolete/octave-2.0.17.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/obsolete/octave-2.0.17.tar.bz2">.tar.bz2</a>)
-</td>
-<td class="download">12 Apr 2002</td></tr>
-<tr><td class="download">
-<a href="ftp://ftp.octave.org/pub/octave">Testing</a> (you probably want this)</td>
+<a href="ftp://ftp.octave.org/pub/octave">Stable</a></td>
 <td class="download">2.1.73
-    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.1.73.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.1.73.tar.bz2">.tar.bz2</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/obsolete/octave-2.1.73.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/obsolete/octave-2.1.73.tar.bz2">.tar.bz2</a>)
 </td>
 <td class="download">27 Mar 2006</td></tr>
 <tr><td class="download">
-<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge">Development</a>  (latest features, but expect a few rough spots)</td>
-<td class="download">2.9.10
-    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.10.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.10.tar.bz2">.tar.bz2</a>)
+<a href="ftp://ftp.octave.org/pub/octave">Testing</a> (you probably want this)</td>
+<td class="download">2.9.11
+    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.9.11.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.9.11.tar.bz2">.tar.bz2</a>)
 </td>
-<td class="download">27 Mar 2007</td></tr>
+<td class="download">22 May 2007</td></tr>
+<tr><td class="download">
+<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge">Development</a>  (latest features, expect a few rough spots)</td>
+<td class="download">2.9.11
+    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.11.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.11.tar.bz2">.tar.bz2</a>)
+</td>
+<td class="download">22 May 2007</td></tr>
 <caption>Download links for Octave</caption>
 </table>
 </div>
+
+<blockquote class="note">
+<strong>PLEASE NOTE: Octave 2.9.11 is a pre-release
+version of Octave 3.0.  It is significantly different from Octave
+2.1.x, particularly with regard to graphics, path handling, and
+built-in variables.  Please read the <a href="NEWS-3.html">NEWS</a> file.</strong>
+</blockquote>
 
 <div class="section">
 <h2>Contributed Packages</h2>
