@@ -336,7 +336,7 @@
 
   <li>The history command should accept two numeric arguments to indicate a range of history entries to display, save or read.</li>
 
-  <li>Add an option to include information about the Octave session in the history list.  Possibly a time/date stamp and the current Octave line number, appended as a comment (users should probably be able to control the ).</li>
+  <li>Add an option to include information about the Octave session in the history list.  Possibly a time/date stamp and the current Octave line number, appended as a comment (users should probably be able to control the format).</li>
 
   <li>Avoid writing the history file if the history list has not changed.</li>
 
@@ -464,7 +464,7 @@
   <ul>
     <li>Add a Makefile target to the Makefiles.</li>
     <li>Comments on <code>#else</code> and <code>#endif</code> preprocessor commands.</li>
-    <li>Change error message  to match standards everywhere.</li>
+    <li>Change error message format to match standards everywhere.</li>
   </ul>
   </li>
 
